--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -1,17 +1,36 @@
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
+// nav {
+//   display: inline-block;
+//   float: left;
+//   background-color: gray;
+//   width: 20%;
+// }
+//
 body {
   text-align: center;
+  background-color: gray;
 }
-
-
-
+//
+//
+//
 .box {
   border: 2px solid $black;
   height: 150px;
   width: 150px;
 }
+
+.message {
+  font-size: 3em;
+}
+
+// .btn-group {
+//   display: inline-block;
+//   justify-content: flex-end;
+//   position: fixed;
+//   float: right;
+//   clear: right;
+//
+// }
 
 .grid {
  top: 50%;
